Fixed margins, paddings, fonts, etc on mobile

--- a/sprint-two/styles/main.scss
+++ b/sprint-two/styles/main.scss
@@ -36,6 +36,7 @@ body {
   width: 100%;
   padding-left: 5%;
   padding-right: 5%;
+  margin-bottom: 45px;
   &__title {
     font-size: 1.7rem;
     font-family: $font-family-bold;
